@@ -3,7 +3,7 @@
 mkdir tmp || exit
 if [[ ! -e releases ]] mkdir releases
 
-tar zcf tmp/tmp.tgz *.cc *.hh *.sh Makefile SConstruct [A-Z]*[A-Z]
+tar zcf tmp/tmp.tgz *.cc *.hh *.sh Makefile [A-Z]*[A-Z]
 
 cd tmp
 tar zxf tmp.tgz
@@ -15,5 +15,3 @@ outfile=releases/CmdLine-$date.tgz
 echo Creating $outfile  which contains
 tar zcvf $outfile  CmdLine
 rm -rf CmdLine
-
-
